// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interface Reflection should compile basic interface: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Interface: BasicInterface

Comments for BasicInterface

## Extended by

- [\`ExtendedInterface\`](ExtendedInterface.md)

## Properties

### ~~deprecatedProp~~

> **deprecatedProp**: \`string\`

#### Deprecated

This prop is deprecated

#### See

Comments for some tag

#### Source

[interfaces.ts:1](http://source-url)

***

### functionProp()

> **functionProp**: (\`s\`) => \`boolean\`

Comments for functionProper

#### Parameters

##### s

\`string\`

Comment for param s

#### Returns

\`boolean\`

#### Source

[interfaces.ts:1](http://source-url)

***

### optionalProp?

> \`optional\` **optionalProp**: \`string\`

Comments for optional prop

#### Source

[interfaces.ts:1](http://source-url)

***

### prop

> **prop**: \`string\`

Comments for prop

#### Source

[interfaces.ts:1](http://source-url)

***

### propReturningObjectDeclaration

> **propReturningObjectDeclaration**: \`object\`

Comments for propReturningObjectDeclaration

#### a

> **a**: \`boolean\`

#### b

> **b**: \`string\`

#### Source

[interfaces.ts:1](http://source-url)

***

### propReturningObjectDeclarations

> **propReturningObjectDeclarations**: \`object\` & \`object\`

Comments for propReturningObjectDeclarations

#### Type declaration

##### a

> **a**: \`boolean\`

##### b

> **b**: \`string\`

#### Type declaration

##### c

> **c**: \`boolean\`

##### d

> **d**: \`string\`

#### Source

[interfaces.ts:1](http://source-url)

***

### propReturningSignatureDeclaration()?

> \`optional\` **propReturningSignatureDeclaration**: () => \`string\` \\| \`number\` \\| \`boolean\`

Comments for propReturningSignatureDeclaration

#### Returns

\`string\` \\| \`number\` \\| \`boolean\`

#### Source

[interfaces.ts:1](http://source-url)

***

### propReturningSignatureDeclarations

> **propReturningSignatureDeclarations**: () => \`any\` & (\`paramsA\`, \`paramsB\`?) => \`any\` & (\`paramsC\`) => \`any\`

Comments for propReturningSignatureDeclarations

#### Source

[interfaces.ts:1](http://source-url)

***

### propWithFunction()

> **propWithFunction**: (\`options\`) => \`boolean\`

Comments for propWithFunction

#### Parameters

##### options

###### options.a

\`boolean\`

###### options.b

\`string\`

#### Returns

\`boolean\`

#### Source

[interfaces.ts:1](http://source-url)

***

### propWithProps

> **propWithProps**: \`object\`

Comments for propWithProps

#### callbacks?

> \`optional\` **callbacks**: \`Partial\`\\<[\`CallbacksOptions\`](../classes/CallbacksOptions.md)\\<[\`DisposableClass\`](../classes/DisposableClass.md), [\`ClassWithModifiers\`](../classes/ClassWithModifiers.md)\\>\\>

Comments for callbacks

#### nestedPropA

> **nestedPropA**: \`string\`

Comments for nestedPropA

#### nestedPropB

> **nestedPropB**: \`boolean\`

Comments for nestedPropB

#### nestedPropC

> **nestedPropC**: \`object\`

Comments for nestedPropC

##### nestedPropC.nestedPropCA

> **nestedPropCA**: \`string\`

Comments for nestedPropCA

#### nestedPropD()

> **nestedPropD**: () => \`boolean\`

Comments for nestedPropD

##### Returns

\`boolean\`

#### Source

[interfaces.ts:1](http://source-url)
"
`;

exports[`Interface Reflection should compile basic interface: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Interface: BasicInterface

Comments for BasicInterface

## Extended by

- [\`ExtendedInterface\`](ExtendedInterface.md)

## Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| ~~\`deprecatedProp\`~~ | \`string\` | **Deprecated** This prop is deprecated **See** Comments for some tag |
| \`functionProp\` | (\`s\`: \`string\`) => \`boolean\` | Comments for functionProper |
| \`optionalProp?\` | \`string\` | Comments for optional prop |
| \`prop\` | \`string\` | Comments for prop |
| \`propReturningObjectDeclaration\` | \`object\` | Comments for propReturningObjectDeclaration |
| \`propReturningObjectDeclaration.a\` | \`boolean\` | - |
| \`propReturningObjectDeclaration.b\` | \`string\` | - |
| \`propReturningObjectDeclarations\` | \`object\` & \`object\` | Comments for propReturningObjectDeclarations |
| \`propReturningSignatureDeclaration?\` | () => \`string\` \\| \`number\` \\| \`boolean\` | Comments for propReturningSignatureDeclaration |
| \`propReturningSignatureDeclarations\` | () => \`any\` & (\`paramsA\`: \`true\` \\| \`any\`[], \`paramsB\`?: \`any\`) => \`any\` & (\`paramsC\`: \`any\`) => \`any\` | Comments for propReturningSignatureDeclarations |
| \`propWithFunction\` | (\`options\`: \`object\`) => \`boolean\` | Comments for propWithFunction |
| \`propWithProps\` | \`object\` | Comments for propWithProps |
| \`propWithProps.callbacks?\` | \`Partial\`\\<[\`CallbacksOptions\`](../classes/CallbacksOptions.md)\\<[\`DisposableClass\`](../classes/DisposableClass.md), [\`ClassWithModifiers\`](../classes/ClassWithModifiers.md)\\>\\> | Comments for callbacks |
| \`propWithProps.nestedPropA\` | \`string\` | Comments for nestedPropA |
| \`propWithProps.nestedPropB\` | \`boolean\` | Comments for nestedPropB |
| \`propWithProps.nestedPropC\` | \`object\` | Comments for nestedPropC |
| \`propWithProps.nestedPropC.nestedPropCA\` | \`string\` | Comments for nestedPropCA |
| \`propWithProps.nestedPropD\` | () => \`boolean\` | Comments for nestedPropD |
"
`;

exports[`Interface Reflection should compile extended interface: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Interface: ExtendedInterface

Comments for ExtendedInterface

## Extends

- [\`BasicInterface\`](BasicInterface.md)

## Properties

### ~~deprecatedProp~~

> **deprecatedProp**: \`string\`

#### Deprecated

This prop is deprecated

#### See

Comments for some tag

#### Inherited from

[\`BasicInterface\`](BasicInterface.md).[\`deprecatedProp\`](BasicInterface.md#deprecatedprop)

#### Source

[interfaces.ts:1](http://source-url)

***

### extendedProp

> **extendedProp**: \`string\`

#### Source

[interfaces.ts:1](http://source-url)

***

### functionProp()

> **functionProp**: (\`s\`) => \`boolean\`

Comments for functionProper

#### Parameters

##### s

\`string\`

Comment for param s

#### Returns

\`boolean\`

#### Inherited from

[\`BasicInterface\`](BasicInterface.md).[\`functionProp\`](BasicInterface.md#functionprop)

#### Source

[interfaces.ts:1](http://source-url)

***

### optionalProp?

> \`optional\` **optionalProp**: \`string\`

Comments for optional prop

#### Inherited from

[\`BasicInterface\`](BasicInterface.md).[\`optionalProp\`](BasicInterface.md#optionalprop)

#### Source

[interfaces.ts:1](http://source-url)

***

### prop

> **prop**: \`string\`

Comments for prop

#### Inherited from

[\`BasicInterface\`](BasicInterface.md).[\`prop\`](BasicInterface.md#prop)

#### Source

[interfaces.ts:1](http://source-url)

***

### propReturningObjectDeclaration

> **propReturningObjectDeclaration**: \`object\`

Comments for propReturningObjectDeclaration

#### a

> **a**: \`boolean\`

#### b

> **b**: \`string\`

#### Inherited from

[\`BasicInterface\`](BasicInterface.md).[\`propReturningObjectDeclaration\`](BasicInterface.md#propreturningobjectdeclaration)

#### Source

[interfaces.ts:1](http://source-url)

***

### propReturningObjectDeclarations

> **propReturningObjectDeclarations**: \`object\` & \`object\`

Comments for propReturningObjectDeclarations

#### Type declaration

##### a

> **a**: \`boolean\`

##### b

> **b**: \`string\`

#### Type declaration

##### c

> **c**: \`boolean\`

##### d

> **d**: \`string\`

#### Inherited from

[\`BasicInterface\`](BasicInterface.md).[\`propReturningObjectDeclarations\`](BasicInterface.md#propreturningobjectdeclarations)

#### Source

[interfaces.ts:1](http://source-url)

***

### propReturningSignatureDeclaration()?

> \`optional\` **propReturningSignatureDeclaration**: () => \`string\` \\| \`number\` \\| \`boolean\`

Comments for propReturningSignatureDeclaration

#### Returns

\`string\` \\| \`number\` \\| \`boolean\`

#### Inherited from

[\`BasicInterface\`](BasicInterface.md).[\`propReturningSignatureDeclaration\`](BasicInterface.md#propreturningsignaturedeclaration)

#### Source

[interfaces.ts:1](http://source-url)

***

### propReturningSignatureDeclarations

> **propReturningSignatureDeclarations**: () => \`any\` & (\`paramsA\`, \`paramsB\`?) => \`any\` & (\`paramsC\`) => \`any\`

Comments for propReturningSignatureDeclarations

#### Inherited from

[\`BasicInterface\`](BasicInterface.md).[\`propReturningSignatureDeclarations\`](BasicInterface.md#propreturningsignaturedeclarations)

#### Source

[interfaces.ts:1](http://source-url)

***

### propWithFunction()

> **propWithFunction**: (\`options\`) => \`boolean\`

Comments for propWithFunction

#### Parameters

##### options

###### options.a

\`boolean\`

###### options.b

\`string\`

#### Returns

\`boolean\`

#### Inherited from

[\`BasicInterface\`](BasicInterface.md).[\`propWithFunction\`](BasicInterface.md#propwithfunction)

#### Source

[interfaces.ts:1](http://source-url)

***

### propWithProps

> **propWithProps**: \`object\`

Comments for propWithProps

#### callbacks?

> \`optional\` **callbacks**: \`Partial\`\\<[\`CallbacksOptions\`](../classes/CallbacksOptions.md)\\<[\`DisposableClass\`](../classes/DisposableClass.md), [\`ClassWithModifiers\`](../classes/ClassWithModifiers.md)\\>\\>

Comments for callbacks

#### nestedPropA

> **nestedPropA**: \`string\`

Comments for nestedPropA

#### nestedPropB

> **nestedPropB**: \`boolean\`

Comments for nestedPropB

#### nestedPropC

> **nestedPropC**: \`object\`

Comments for nestedPropC

##### nestedPropC.nestedPropCA

> **nestedPropCA**: \`string\`

Comments for nestedPropCA

#### nestedPropD()

> **nestedPropD**: () => \`boolean\`

Comments for nestedPropD

##### Returns

\`boolean\`

#### Inherited from

[\`BasicInterface\`](BasicInterface.md).[\`propWithProps\`](BasicInterface.md#propwithprops)

#### Source

[interfaces.ts:1](http://source-url)
"
`;

exports[`Interface Reflection should compile extended interface: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Interface: ExtendedInterface

Comments for ExtendedInterface

## Extends

- [\`BasicInterface\`](BasicInterface.md)

## Properties

| Property | Type | Description | Inherited from |
| :------ | :------ | :------ | :------ |
| ~~\`deprecatedProp\`~~ | \`string\` | **Deprecated** This prop is deprecated **See** Comments for some tag | [\`BasicInterface\`](BasicInterface.md).\`deprecatedProp\` |
| \`extendedProp\` | \`string\` | - | - |
| \`functionProp\` | (\`s\`: \`string\`) => \`boolean\` | Comments for functionProper | [\`BasicInterface\`](BasicInterface.md).\`functionProp\` |
| \`optionalProp?\` | \`string\` | Comments for optional prop | [\`BasicInterface\`](BasicInterface.md).\`optionalProp\` |
| \`prop\` | \`string\` | Comments for prop | [\`BasicInterface\`](BasicInterface.md).\`prop\` |
| \`propReturningObjectDeclaration\` | \`object\` | Comments for propReturningObjectDeclaration | [\`BasicInterface\`](BasicInterface.md).\`propReturningObjectDeclaration\` |
| \`propReturningObjectDeclaration.a\` | \`boolean\` | - | - |
| \`propReturningObjectDeclaration.b\` | \`string\` | - | - |
| \`propReturningObjectDeclarations\` | \`object\` & \`object\` | Comments for propReturningObjectDeclarations | [\`BasicInterface\`](BasicInterface.md).\`propReturningObjectDeclarations\` |
| \`propReturningSignatureDeclaration?\` | () => \`string\` \\| \`number\` \\| \`boolean\` | Comments for propReturningSignatureDeclaration | [\`BasicInterface\`](BasicInterface.md).\`propReturningSignatureDeclaration\` |
| \`propReturningSignatureDeclarations\` | () => \`any\` & (\`paramsA\`: \`true\` \\| \`any\`[], \`paramsB\`?: \`any\`) => \`any\` & (\`paramsC\`: \`any\`) => \`any\` | Comments for propReturningSignatureDeclarations | [\`BasicInterface\`](BasicInterface.md).\`propReturningSignatureDeclarations\` |
| \`propWithFunction\` | (\`options\`: \`object\`) => \`boolean\` | Comments for propWithFunction | [\`BasicInterface\`](BasicInterface.md).\`propWithFunction\` |
| \`propWithProps\` | \`object\` | Comments for propWithProps | [\`BasicInterface\`](BasicInterface.md).\`propWithProps\` |
| \`propWithProps.callbacks?\` | \`Partial\`\\<[\`CallbacksOptions\`](../classes/CallbacksOptions.md)\\<[\`DisposableClass\`](../classes/DisposableClass.md), [\`ClassWithModifiers\`](../classes/ClassWithModifiers.md)\\>\\> | Comments for callbacks | - |
| \`propWithProps.nestedPropA\` | \`string\` | Comments for nestedPropA | - |
| \`propWithProps.nestedPropB\` | \`boolean\` | Comments for nestedPropB | - |
| \`propWithProps.nestedPropC\` | \`object\` | Comments for nestedPropC | - |
| \`propWithProps.nestedPropC.nestedPropCA\` | \`string\` | Comments for nestedPropCA | - |
| \`propWithProps.nestedPropD\` | () => \`boolean\` | Comments for nestedPropD | - |
"
`;

exports[`Interface Reflection should compile indexable interface: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Interface: IndexableInterface

Comments for IndexableInterface

## Indexable

 \\[\`s\`: \`string\`\\]: \`string\`

## Properties

### prop

> **prop**: \`string\`

#### Source

[interfaces.ts:1](http://source-url)
"
`;

exports[`Interface Reflection should compile indexable interface: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Interface: IndexableInterface

Comments for IndexableInterface

## Indexable

 \\[\`s\`: \`string\`\\]: \`string\`

## Properties

| Property | Type |
| :------ | :------ |
| \`prop\` | \`string\` |
"
`;

exports[`Interface Reflection should compile interface with comments: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Interface: InterfaceWithComments\\<A, B, C, D\\>

Comments for interface
over two lines

And some more comments

## Type Parameters

• **A**

This is a parameter.

• **B**

Comments for a parameter.
This sentence is on a soft new line.

• **C**

This is a parameter.

 Documentation with a double line

• **D**

<p>These are comments with paras</p>
<p>These are comments with paras</p>
Other comments
Comments with <p>paras</p>

<p>These are comments with paras</p>

## Properties

### ~~propertyWithComments~~

> **propertyWithComments**: \`string\`

Some text.

- list item
- list item

#### Deprecated

This is a deprecated property

#### See

https://example.com

#### Source

[interfaces.ts:1](http://source-url)
"
`;

exports[`Interface Reflection should compile interface with comments: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Interface: InterfaceWithComments\\<A, B, C, D\\>

Comments for interface
over two lines

And some more comments

## Type Parameters

| Type Parameter | Description |
| :------ | :------ |
| \`A\` | This is a parameter. |
| \`B\` | Comments for a parameter. This sentence is on a soft new line. |
| \`C\` | This is a parameter. Documentation with a double line |
| \`D\` | <p>These are comments with paras</p> <p>These are comments with paras</p> Other comments Comments with <p>paras</p> <p>These are comments with paras</p> |

## Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| ~~\`propertyWithComments\`~~ | \`string\` | Some text. - list item - list item **Deprecated** This is a deprecated property **See** https://example.com |
"
`;

exports[`Interface Reflection should compile interface with event properties: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Interface: InterfaceWithEventProperties

## Properties

### someProp?

> \`optional\` **someProp**: \`boolean\`

Description for prop someProp

#### Source

[interfaces.ts:1](http://source-url)

## Events

### anotherEvent

> **anotherEvent**: \`MouseEvent\`

#### Source

[interfaces.ts:1](http://source-url)

***

### ~~someEvent()?~~

> \`optional\` **someEvent**: (\`eventParam\`) => \`void\`

Description for event someEvent

#### Deprecated

Deprectaed comments

#### Parameters

##### eventParam

[\`CustomEventInterface\`](CustomEventInterface.md)\\<\`MouseEvent\`\\>

Comments for param eventParam

#### Returns

\`void\`

#### Source

[interfaces.ts:1](http://source-url)
"
`;

exports[`Interface Reflection should compile interface with event properties: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Interface: InterfaceWithEventProperties

## Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| \`someProp?\` | \`boolean\` | Description for prop someProp |

## Events

| Event | Type | Description |
| :------ | :------ | :------ |
| \`anotherEvent\` | \`MouseEvent\` | - |
| ~~\`someEvent?\`~~ | (\`eventParam\`: [\`CustomEventInterface\`](CustomEventInterface.md)\\<\`MouseEvent\`\\>) => \`void\` | Description for event someEvent **Deprecated** Deprectaed comments |
"
`;

exports[`Interface Reflection should compile interface with flags: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Interface: InterfaceWithFlags

Comments for InterfaceWithFlags

## Properties

### expermintalProp?

> \`optional\` **expermintalProp**: \`string\`

**\`Experimental\`**

#### Source

[interfaces.ts:1](http://source-url)

***

### internalProp

> **internalProp**: \`string\`

**\`Internal\`**

Comments for internalProp

#### Source

[interfaces.ts:1](http://source-url)
"
`;

exports[`Interface Reflection should compile interface with flags: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Interface: InterfaceWithFlags

Comments for InterfaceWithFlags

## Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| \`expermintalProp?\` | \`string\` | **\`Experimental\`** |
| \`internalProp\` | \`string\` | **\`Internal\`** Comments for internalProp |
"
`;

exports[`Interface Reflection should compile interface with type parameters: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Interface: InterfaceWithTypeParameters\\<A\\>

Comments for InterfaceWithTypeParameters

## Type Parameters

• **A**

## Properties

### prop

> **prop**: \`A\`

Comments for prop

#### Source

[interfaces.ts:1](http://source-url)
"
`;

exports[`Interface Reflection should compile interface with type parameters: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Interface: InterfaceWithTypeParameters\\<A\\>

Comments for InterfaceWithTypeParameters

## Type Parameters

| Type Parameter |
| :------ |
| \`A\` |

## Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| \`prop\` | \`A\` | Comments for prop |
"
`;

exports[`Interface Reflection should compile multiple indexable interface: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Interface: MultipleIndexableInterface

## Indexable

 \\[\`key\`: \`string\`\\]: \`string\`

 \\[\`index\`: \`number\`\\]: \`string\`

## Properties

### prop

> **prop**: \`string\`

Prop

#### Source

[interfaces.ts:1](http://source-url)
"
`;

exports[`Interface Reflection should compile multiple indexable interface: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Interface: MultipleIndexableInterface

## Indexable

 \\[\`key\`: \`string\`\\]: \`string\`

 \\[\`index\`: \`number\`\\]: \`string\`

## Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| \`prop\` | \`string\` | Prop |
"
`;
